Add update query